.k8s/Database_service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
