.k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    # Exemplo para uso com Nginx Ingress Controller
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: app.planodecorte.local  # O domínio que você usará
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Nome do Service que expõe seu arquivo Index.js (Backend)
            name: backend-service 
            port:
              number: 3000
